objects/CMPL123CME__MedDRA_Child_Object_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Linked_Object__c</fullName>
        <description>Object to store the search results</description>
        <label>Linked Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Version__c</fullName>
        <label>Version</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings14</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings14</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_code__c</fullName>
        <label>HLGT Code</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings15</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings15</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_kana1__c</fullName>
        <label>HLGT Kana1</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings16</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings16</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_kana2__c</fullName>
        <label>HLGT Kana2</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings17</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings17</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_kana__c</fullName>
        <label>HLGT Kana</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_name__c</fullName>
        <label>HLGT Name</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings1</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings1</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_code__c</fullName>
        <label>HLT Code</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings2</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings2</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_kana1__c</fullName>
        <label>HLT Kana1</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings19</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings19</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_kana2__c</fullName>
        <label>HLT Kana2</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings0001</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings0001</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_kana__c</fullName>
        <label>HLT Kana</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings18</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings18</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_name__c</fullName>
        <label>HLT Name</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings3</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings3</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_code__c</fullName>
        <label>LLT Code</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings4</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings4</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_kana1__c</fullName>
        <label>LLT Kana1</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings000L</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings000L</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_kana2__c</fullName>
        <label>LLT Kana2</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings000V</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings000V</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_kana__c</fullName>
        <label>LLT Kana</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings000B</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings000B</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__llt_name__c</fullName>
        <label>LLT Name</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings5</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings5</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__meddra_unique_key__c</fullName>
        <label>MedDRA Unique Key</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings30</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings30</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__null_field__c</fullName>
        <label>Null field</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings6</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings6</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__primary_soc_fg__c</fullName>
        <label>Primary SOC Flag</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings7</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings7</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_code__c</fullName>
        <label>PT Code</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings8</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings8</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_kana1__c</fullName>
        <label>PT Kana1</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings000p</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings000p</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_kana2__c</fullName>
        <label>PT Kana2</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings000z</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings000z</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_kana__c</fullName>
        <label>PT Kana</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings000f</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings000f</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_name__c</fullName>
        <label>PT Name</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings9</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings9</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_soc_code__c</fullName>
        <label>PT SOC Code</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings10</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings10</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_abbrev__c</fullName>
        <label>SOC Abbreviation</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings11</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings11</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_code__c</fullName>
        <label>SOC Code</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings12</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings12</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_kana1__c</fullName>
        <label>SOC Kana1</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings001E</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings001E</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_kana2__c</fullName>
        <label>SOC Kana2</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings001O</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings001O</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_kana__c</fullName>
        <label>SOC Kana</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings0019</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings0019</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_name__c</fullName>
        <label>SOC Name</label>
        <metadataRelationshipControllingField>CMPL123CME__MedDRA_Child_Object_Mapping__mdt.CMPL123CME__Linked_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>MedDRA_Child_Object_Mappings13</relationshipLabel>
        <relationshipName>MedDRA_Child_Object_Mappings13</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>MedDRA Child Object Mapping</label>
    <listViews>
        <fullName>CMPL123CME__MedDRA_Child_Object_Mapping</fullName>
        <columns>MasterLabel</columns>
        <columns>CMPL123CME__Linked_Object__c</columns>
        <columns>CMPL123CME__Version__c</columns>
        <columns>CMPL123CME__soc_code__c</columns>
        <columns>CMPL123CME__soc_name__c</columns>
        <columns>CMPL123CME__hlgt_code__c</columns>
        <columns>CMPL123CME__hlgt_name__c</columns>
        <columns>CMPL123CME__hlt_code__c</columns>
        <columns>CMPL123CME__hlt_name__c</columns>
        <columns>CMPL123CME__pt_code__c</columns>
        <columns>CMPL123CME__pt_name__c</columns>
        <columns>CMPL123CME__llt_code__c</columns>
        <columns>CMPL123CME__llt_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>MedDRA Child Object Mapping</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>MedDRA Child Object Mappings</pluralLabel>
    <validationRules>
        <fullName>CMPL123CME__MedDRA_Unique_Key_Field_Is_Required</fullName>
        <active>true</active>
        <description>MedDRA Unique Key Field Is Required</description>
        <errorConditionFormula>CMPL123CME__meddra_unique_key__c = null</errorConditionFormula>
        <errorDisplayField>CMPL123CME__meddra_unique_key__c</errorDisplayField>
        <errorMessage>MedDRA Unique Key Field Is Required</errorMessage>
    </validationRules>
</CustomObject>